--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.0.1",
     "core-js": "^3.8.3",
     "vue": "^2.6.14"
   },
