--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.0.1",
     "core-js": "^3.8.3",
